--- a/public/online/online.css
+++ b/public/online/online.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', Meiryo, sans-serif;
-    background-image: url('../../images/imagesbackground.jpg');
+    background-image: url('/images/imagesbackground.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
