--- a/public/online/views/online_login.html
+++ b/public/online/views/online_login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>オンラインプレイ - ログイン | Tokyo Flag Capturing Geoguesser</title>
-    <link rel="stylesheet" href="../online.css">
+    <link rel="stylesheet" href="/online/online.css">
 </head>
 <body>
     <div class="page-container">
@@ -46,6 +46,6 @@
         </main>
     </div>
     
-    <script src="../scripts/login.js"></script>
+    <script src="/online/scripts/login.js"></script>
 </body>
 </html>
