ファビコンの追加およびヒントの円のデバッグ

--- a/public/online/views/online_room_join.html
+++ b/public/online/views/online_room_join.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ルーム参加 - オンラインプレイ | Tokyo Flag Capturing Geoguesser</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/online/online_rooms.css">
 </head>
 <body>
