--- a/public/online/views/online_game.html
+++ b/public/online/views/online_game.html
@@ -5,6 +5,7 @@
     <title>マルチプレイ - 3km Lost Point Guesser</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/online/online_game.css">
 </head>
 
