ランダムスポーンとスポーン位置の修正

--- a/public/online/views/online_game.html
+++ b/public/online/views/online_game.html
@@ -140,6 +140,8 @@
         </div>
     </div>
 
+    <!-- Socket.IO クライアントライブラリ -->
+    <script src="/socket.io/socket.io.js"></script>
     <!-- Canvas Confetti ライブラリ -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <script src="/online/scripts/online_game.js"></script>
